# ColorCalc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: color_calc.conf  config.json  container_templates.json  paint.json  presets.json  standard_presets.json  tables_structure.json  user_presets.json
docs/: .$classes.drawio.bkp  classes.drawio
modules/: SimpleCLI
modules/cli/: CMakeLists.txt
modules/tables/: CMakeLists.txt
modules/tables/src/: main.cpp
modules/tables/src/auxillary_classes/headers/: SmartPointer.hpp
modules/tables/src/tables/headers/: BaseTable.hpp  ITable.hpp
modules/tables/src/values/headers/: AutoValue.hpp  DoubleValue.hpp  IValue.hpp  IntValue.hpp  StringValue.hpp
modules/tables/src/values/sources/: AutoValue.cpp  DoubleValue.cpp  IntValue.cpp  StringValue.cpp
src/: main.cpp  test_main.cpp
src/auxillary/headers/: UnstableNamedValue.hpp  auxillary_methods.hpp
src/auxillary_classes/headers/: TableUpdateList.hpp  UnstableNamedValue.hpp
src/auxillary_methods/headers/: common_methods.hpp  option_methods.hpp
src/auxillary_methods/sources/: option_methods.cpp
src/classes/api/exceptions/: EnvironmentException.hpp  ValueException.hpp  VariableException.hpp
src/classes/auxillary_methods/headers/: common_methods.hpp  option_methods.hpp
src/classes/auxillary_methods/sources/: common_methods.cpp  option_methods.cpp
src/classes/connections/headers/: ConnectionStatus.hpp  IConnection.hpp  JsonConnection.hpp
src/classes/connections/sources/: ConnectionStatus.cpp  JsonConnection.cpp
src/classes/containers/headers/: AbstractDataContainer.hpp  LacquerDataContainer.hpp  PaintDataContainer.hpp
src/classes/containers/sources/: PaintDataContainer.cpp
src/classes/exceptions/: JsonValueIsNullException.hpp
src/classes/expressions/headers/: AdditionExpression.hpp  DivisionExpression.hpp  IExpression.hpp  LeafExpression.hpp  MultiplicationExpression.hpp  NodeExpression.hpp  SubtractionExpression.hpp
src/classes/expressions/sources/: DivisionExpression.cpp  LeafExpression.cpp
src/classes/factories/headers/: AdditionExpressionFactory.hpp  DivisionExpressionFactory.hpp  IExpressionFactory.hpp  LeafExpressionFactory.hpp  MultiplicationExpressionFactory.hpp  SubtractionExpressionFactory.hpp
src/classes/factories/sources/: DivisionExpressionFactory.cpp  LeafExpressionFactory.cpp
src/classes/headers/: IConnection.hpp  JsonConnection.hpp  PaintDataContainer.hpp  calculation_functions.hpp  option_methods.hpp  paint_calculation_option_methods.hpp
src/classes/math/exceptions/: ExpressionException.hpp  MathException.hpp
src/classes/operators/headers/: AbstractOperator.hpp  AbstractOperatorFactory.hpp  AdditionOperator.hpp  AdditionOperatorFactory.hpp  CalculationOperator.hpp  IOperator.hpp  IOperatorFactory.hpp  PriorityModifier.hpp  ServiceOperator.hpp  SubtractionOperator.hpp  SubtractionOperatorFactory.hpp
src/classes/parser/headers/: Parser.hpp
src/classes/parser/sources/: MathParser.cpp  Parser.cpp
src/classes/sources/: JsonConnection.cpp  PaintDataContainer.cpp
src/cli/leaf_options/headers/: AbstractLeafOption.hpp  BackOption.hpp  CustomLeafOption.hpp  HelpOption.hpp  IOption.hpp  QuitOption.hpp
src/cli/leaf_options/sources/: HelpOption.cpp
src/cli_methods/headers/: common_methods.hpp  option_methods.hpp
src/cli_methods/sources/: option_methods.cpp
src/config_managers/headers/: BaseConfigManager.hpp  IConfigManager.hpp  JSONConfigManager.hpp
src/config_managers/sources/: JSONConfigManager.cpp
src/connections/headers/: ConnectionManager.hpp  IConnection.hpp  ITableConnection.hpp  JSONTableConnection.hpp  JsonConnection.hpp  TableConnectionManager.hpp
src/connections/sources/: ConnectionManager.cpp  IConnection.cpp  JSONTableConnection.cpp  JsonConnection.cpp  TableConnectionManager.cpp
src/containers/headers/: AbstractDataContainer.hpp  DataContainer.hpp  IDataContainer.hpp  LacquerDataContainer.hpp  PaintDataContainer.hpp
src/containers/sources/: DataContainer.cpp  LacquerDataContainer.cpp  PaintDataContainer.cpp
src/data/: paint.json
src/dispatchers/headers/: AbstractDataDispatcher.hpp  FoilDataDispatcher.hpp  FoilRollsDataDispatcher.hpp  LacquerDataDispatcher.hpp  PaintConsumptionDispatcher.hpp  PaintDataDispatcher.hpp
src/dispatchers/sources/: AbstractDataDispatcher.cpp  FoilDataDispatcher.cpp  FoilRollsDataDispatcher.cpp  LacquerDataDispatcher.cpp  PaintConsumptionDispatcher.cpp  PaintDataDispatcher.cpp
src/exceptions/: PresetAlreadyExistsException.hpp  PresetDoesNotExistException.hpp  ReadOnlyConnectionException.hpp  UndefinedValueException.hpp
src/managers/headers/: FoilDataManager.hpp  FoilRollsDataManager.hpp  IDataManager.hpp  LacquerDataManager.hpp  PaintConsumptionDataManager.hpp  PaintDataManager.hpp
src/managers/sources/: FoilDataManager.cpp  FoilRollsDataDispatcher.cpp  FoilRollsDataManager.cpp  LacquerDataManager.cpp  PaintConsumptionDataManager.cpp  PaintDataDispatcher.cpp  PaintDataManager.cpp
src/table_connection_strategies/headers/: ITableConnectionStrategy.hpp
src/values/headers/: UnstableNamedValue.hpp
(+78 files in other folders)
